Archive2/da/5bd7be6f2983b7/output
main.cpp:20:9: error: cannot delete expression of type 'int'
        delete *Iter;
        ^      ~~~~~
1 error generated.
